--- a/community.html
+++ b/community.html
@@ -148,6 +148,18 @@
                 padding: 8px 15px;
             }
         }
+
+        .community-hero {
+            height: 60vh;
+            background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('images/backgrounds/photo-1617014209067-ea13fa8c2ef8.jpg');
+            background-size: cover;
+            background-position: center;
+            color: white;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+        }
     </style>
 </head>
 <body>
