--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
     <title>慢野 - 中西部自驾游平台</title>
     <link rel="stylesheet" href="public/css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <style>
+        /* Hero Section Styles */
+        .hero {
+            height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            color: white;
+            background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('images/backgrounds/photo-1617014209067-ea13fa8c2ef8.jpg');
+            background-size: cover;
+            background-position: center;
+            position: relative;
+        }
+    </style>
 </head>
 <body>
     <header>
