Fix JS errors on service-detail page

--- a/service-detail.html
+++ b/service-detail.html
@@ -2288,7 +2288,8 @@
                             'AMap.ToolBar',
                             'AMap.MapType',
                             'AMap.Driving',
-                            'AMap.Geocoder'
+                            'AMap.Geocoder',
+                            'AMap.AutoComplete' // Add AutoComplete plugin
                         ].join(',');
                         
                         // 按照最新的JavaScript API v2.0文档加载地图
